k8s/base/k8s-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: projects-experience-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/wait-for-ready: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /projects-experience(/|$)(.*)

            backend:
              service:
                name: projects-experience-service
                port:
                  number: 8080
